--- a/samples/requirements-test.txt
+++ b/samples/requirements-test.txt
@@ -1,3 +1,4 @@
 pytest==7.1.3
-pytest-parallel==0.1.1
+google-cloud-compute==1.5.2
+google-cloud-resource-manager==1.6.1
 google-cloud-storage==2.5.0
