--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,12 +7,12 @@
         "google/cloud/batch/gapic_version.py",
         {
           "type": "json",
-          "path": "samples/generated_samples/snippet_metadata_batch_v1.json",
+          "path": "samples/generated_samples/snippet_metadata_google.cloud.batch.v1alpha.json",
           "jsonpath": "$.clientLibrary.version"
         },
         {
           "type": "json",
-          "path": "samples/generated_samples/snippet_metadata_batch_v1alpha.json",
+          "path": "samples/generated_samples/snippet_metadata_google.cloud.batch.v1.json",
           "jsonpath": "$.clientLibrary.version"
         }
       ]
