--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,8 @@
     ".": {
       "release-type": "python",
       "extra-files": [
+        "google/cloud/batch_v1/gapic_version.py",
+        "google/cloud/batch_v1alpha/gapic_version.py",
         "google/cloud/batch/gapic_version.py",
         {
           "type": "json",
